syntax = "proto3";
package orders;

service OrderBook{
    rpc NewOrder (NewOrderRequest) returns (NewOrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
    rpc ModifyOrder (ModifyOrderRequest) returns (ModifyOrderResponse);
    rpc BookDepth (BookRequest) returns (BookResponse);
}

message ModifyOrderRequest{
    string order_id = 1;
    optional uint32 new_price = 2;
    optional uint32 new_quantity = 3;
    bool side = 4;
}

message ModifyOrderResponse{
    string order_id = 1;
    uint32 status = 2;
    optional string output = 3;
}

message NewOrderRequest{
    optional string user_id = 1;
    optional uint32 price = 2;
    uint32 quantity = 3;
    bool is_buy_side = 4;
    string security_name = 5;
    OrderType order_type = 6;
}

message NewOrderResponse{
    string order_id = 1;
    uint32 status = 2;
    optional uint32 order_index = 3;
    optional string cause = 4;
}

enum OrderType{
    MARKET = 0;
    LIMIT = 1;
}

message CancelOrderRequest{
    string engine_order_id = 2;
}

message CancelOrderResponse{
    uint32 status = 1;
    optional string cause = 2;
}

message BookRequest{
    string security_name = 1;
    optional uint32 level_count = 2;
}

message BookResponse{
    uint32 status = 1;
    optional BookDepth book_depth = 2;
}

message PriceLevelDepth{
    uint32 price = 1;
    uint32 quantity = 2;
}

message BookDepth{
    repeated PriceLevelDepth bid_depth = 1;
    repeated PriceLevelDepth ask_depth = 2;
}
